Ensure login form elements are visible in IE < 9

--- a/app/assets/stylesheets/ie.css.sass
+++ b/app/assets/stylesheets/ie.css.sass
@@ -3,3 +3,5 @@
 .menu
   background: $brown
 
+input[type='text']
+  border-width: 2px
